    The actual speedups will depend heavily on your DBAPI and
    the mix of datatypes used in your tables, and can vary from
    a 30% improvement to more than 200%.  It also provides a modest
    (~15-20%) indirect improvement to ORM speed for large queries.
    Note that it is *not* built/installed by default.
    See README for installation instructions.

- declarative
  - DeclarativeMeta exclusively uses cls.__dict__ (not dict_) 
    as the source of class information; _as_declarative exclusively 
    uses the  dict_ passed to it as the source of class information 
    (which when using DeclarativeMeta is cls.__dict__).  This should 
    in theory make it easier for custom metaclasses to modify
    the state passed into _as_declarative.

   - the __mapper_args__ dict is copied when propagating to a subclass,
     and is taken straight off the class __dict__ to avoid any
     propagation from the parent.  mapper inheritance already
     propagates the things you want from the parent mapper.
     [ticket:1393]
     
- mysql
  - Fixed reflection bug whereby when COLLATE was present, 
    nullable flag and server defaults would not be reflected.
    [ticket:1655]

  - Fixed reflection of TINYINT(1) "boolean" columns defined with
    integer flags like UNSIGNED.

  - Further fixes for the mysql-connector dialect.  [ticket:1668]
  
  - Composite PK table on InnoDB where the "autoincrement" column
    isn't first will emit an explicit "KEY" phrase within 
    CREATE TABLE thereby avoiding errors, [ticket:1496]

  - Added reflection/create table support for a wide range
    of MySQL keywords.  [ticket:1634]
    
- mssql
  - Re-established initial support for pymssql.

  - Removed the text_as_varchar option.

- oracle
   - "out" parameters require a type that is supported by
     cx_oracle.  An error will be raised if no cx_oracle
     type can be found.
     
- sqlite
   - Added "native_datetime=True" flag to create_engine().